--- a/Template/EASYINVOICE.yaml
+++ b/Template/EASYINVOICE.yaml
@@ -1,24 +1,73 @@
-# Regex Template for Invoices issued from EASYINVOICE
-# Key
-issuer : "EASYINVOICE"
-regex_option : i
+# YAML test file
+# Invoice Provider: EASYINVOICE
+---
+recognize_key:
+  name: Provider
+  pattern: easyinvoice.com.vn
 
-# Invoice Elements
-inv_ele: 
- - number : 'Số.*\:(.*)'
- - date : 'Ký\s*ngày[\s\S](.*)'
- - form : 'Mẫu\s*số.*\:(.*)'
- - serial : 'Ký\s*hiệu.*\:(.*)'
- - description : '1\s*\n([\s\S]*)(\n.){2}'
- - seller_name : '(công\s*ty.*)'
- - seller_tax_code : 'công\s*ty.*\n(.*)'
- - buyer_name : 'Tên đơn vị.*\:(.*)'
- - buyer_tax_code : 'Tên đơn vị.*\n.*\:(.*)'
- - amount_before_tax : 'Cộng\s*tiền\s*hàng.*\n(.*)'
- - amount_tax : 'tiền\s*thuế.*\n(.*)'
- - amount_after_tax : 'Tổng\s*cộng.*\n(.*)'
- - tax_rate : 'Thuế\s*suất\s*GTGT.*\:(.*)'
- - tax_authority_code : 'Mã\s*của.*\:(.*)'
- - search_code : 'Mã\s*tra.*\:(.*)'
- - search_website : 'Trang\s*tra\s*cứu\:\s*(\S*)'
- 
+inv_date:
+  name: Invoice Date
+  pattern: 'Ký\s*ngày[\s\S](.*)'
+
+inv_number:
+  name: Invoice Number
+  pattern: 'Số.*\:(.*)'
+
+inv_form:
+  name: Invoice Form
+  pattern: 'Mẫu\s*số.*\:(.*)'
+
+inv_serial:
+  name: Invoice Serial
+  pattern: 'Ký\s*hiệu.*\:(.*)'
+
+inv_description:
+  name: Invoice Description
+  pattern: '1\s*\n([\s\S]*)(\n.){2}'
+
+seller_name:
+  name: Seller
+  pattern: '(công\s*ty.*)'
+  flag: re.IGNORECASE
+
+seller_tax_code:
+  name: Seller Tax Code
+  pattern: 'công\s*ty.*\n(.*)'
+  flag: re.IGNORECASE
+
+buyer_name:
+  name: Buyer
+  pattern: 'Tên đơn vị.*\:(.*)'
+
+buyer_tax_code:
+  name: Buyer Tax Code
+  pattern: 'Tên đơn vị.*\n.*\:(.*)'
+
+amount_before_tax:
+  name: Amount Before Tax
+  pattern: 'Cộng\s*tiền\s*hàng.*\n(.*)'
+
+amount_tax:
+  name: Tax Amount
+  pattern: 'tiền\s*thuế.*\n(.*)'
+  flag: re.IGNORECASE
+
+amount_after_tax:
+  name: Amount After Tax
+  pattern: 'Tổng\s*cộng.*\n(.*)'
+
+tax_rate:
+  name: Tax Rate
+  pattern: 'Thuế\s*suất\s*GTGT.*\:(.*)'
+
+tax_authority_code:
+  name: Tax Authority Code
+  pattern: 'Mã\s*của.*\:(.*)'
+
+search_code:
+  name: Search Code
+  pattern: 'Mã\s*tra.*\:(.*)'
+
+search_website:
+  name: Search Website
+  pattern: 'Trang\s*tra\s*cứu\:\s*(\S*)'
