--- a/Template/Default.yaml
+++ b/Template/Default.yaml
@@ -1,11 +1,11 @@
 # Default Template for Invoice Reader 2.0
 ---
 key:
-  pattern:
-  flag:
+  pattern: "Default"
 
 inv_date:
-  pattern: 'Ký\s*ngày(.*)'
+  pattern: 'Ký\s*ngày\D*((0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d)'
+  flag: IGNORECASE
 
 inv_form:
   pattern: 'Mẫu\s*số.*\:(.*)'
