--- a/Template/HCL.yml
+++ b/Template/HCL.yml
@@ -7,7 +7,7 @@ fields:
     regex: (INVOICE|CREDIT\s*MEMO)
   po_number:
     parser: regex
-    regex: PO\s*Number\s*\:(.*)
+    regex: 'PO\s*Number\s*\: (.*)'
   inv_number:
     parser: regex
     regex: Invoice\s*Number\s*\:[\D\s]*(\d*)
